# redut

./: .dockerignore  .env  .gitignore  README.md  compose.db.yaml  compose.yaml  todo.md
app/: Dockerfile  README.md  pyproject.toml
app/calc/: admin.py  models.py  serializers.py  urls.py  views.py
app/calc/migrations/: 0010_initial.py  0011_baserate.py  0012_range_default_value.py  0013_alter_range_options_range_order.py
app/server/: celery.py  logger.py  settings.py  urls.py
app/webapp/: admin.py  md.py  models.py  serializers.py  urls.py  views.py
app/webapp/migrations/: 0001_initial.py  0002_block_page_delete_seo_page_only_one_homepage_and_more.py  0003_alter_block_content.py  0004_block_content_rendered_alter_block_content.py  0005_alter_block_page_alter_block_type_image.py  0006_block_title.py  0007_alter_block_options_block_slug_alter_page_slug_and_more.py  0008_block_menu_title.py  0009_page_logo_alter_image_title_sitesettings.py  0010_alter_sitesettings_logo.py  0011_alter_sitesettings_logo.py  0012_alter_block_type.py  0013_block_sub_title.py  0014_image_text_rendered_alter_image_text.py  0015_block_external_link_block_link.py  0016_block_is_text_right_alter_block_external_link_and_more.py  0017_feedback_alter_block_type.py  0018_sitesettings_footer_text_md_alter_block_title_and_more.py  0019_block_btn_title_alter_block_order_alter_block_type.py  0020_alter_sitesettings_footer_text_md.py  0021_sitesettings_name.py  0022_remove_image_url_image_external_link_image_link_and_more.py  0023_image_btn_title.py  0024_category_page_category.py  0030_topitem.py  (+31 more)
(+52 files in other folders)
